src/main/default/objects/CVMA_Housing_Financial_Resource__mdt/CVMA_Housing_Financial_Resource__mdt.object-meta.xml
<CustomObject>
    <description>Housing and financial assistance resources for veterans in crisis - managed via custom metadata for easy updates</description>
    <label>CVMA Housing Financial Resource</label>
    <pluralLabel>CVMA Housing Financial Resources</pluralLabel>
</CustomObject>