src/main/default/objects/CVMA_Housing_Financial_Resource__mdt/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Physical address (for shelters, food banks, etc.)</description>
    <label>Address</label>
    <type>TextArea</type>
</CustomField>