src/main/default/objects/CVMA_Housing_Financial_Resource__mdt/fields/CEB_Approval_Required__c.field-meta.xml
<CustomField>
    <fullName>CEB_Approval_Required__c</fullName>
    <label>CEB Approval Required</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Requires CEB approval (CVMA emergency fund, etc.)</description>
</CustomField>