src/main/default/objects/CVMA_Housing_Financial_Resource__mdt/fields/Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email__c</fullName>
    <label>Contact Email</label>
    <type>Email</type>
    <description>Contact email address</description>
</CustomField>