src/main/default/objects/CVMA_Housing_Financial_Resource__mdt/fields/Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone__c</fullName>
    <description>Contact phone number (24/7 hotline for emergency services)</description>
    <label>Contact Phone</label>
    <type>Phone</type>
</CustomField>