src/main/default/objects/CVMA_Housing_Financial_Resource__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Service description and how it helps veterans</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>