src/main/default/objects/CVMA_Housing_Financial_Resource__mdt/fields/Display_Order__c.field-meta.xml
<CustomField>
    <fullName>Display_Order__c</fullName>
    <label>Display Order</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <description>Sort order for display (lower numbers appear first)</description>
</CustomField>