src/main/default/objects/CVMA_Housing_Financial_Resource__mdt/fields/Eligibility_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Requirements__c</fullName>
    <label>Eligibility Requirements</label>
    <type>LongTextArea</type>
    <length>1000</length>
    <description>Veteran eligibility criteria</description>
</CustomField>