src/main/default/objects/CVMA_Housing_Financial_Resource__mdt/fields/Emergency_Service__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <description>24/7 emergency availability</description>
    <label>Emergency Service</label>
    <type>Checkbox</type>
</CustomField>