src/main/default/objects/CVMA_Housing_Financial_Resource__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Active status for resource</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>