src/main/default/objects/CVMA_Housing_Financial_Resource__mdt/fields/Resource_Name__c.field-meta.xml
<CustomField>
    <fullName>Resource_Name__c</fullName>
    <description>Program or service name (e.g., VA Home Loan Program, HUD-VASH)</description>
    <label>Resource Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>