src/main/default/objects/CVMA_Housing_Financial_Resource__mdt/fields/Resource_Type__c.field-meta.xml
<CustomField>
    <fullName>Resource_Type__c</fullName>
    <label>Resource Type</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
    <description>Type: VA Home Loan, Emergency Shelter, Financial Aid, Rental Assistance, Utility Assistance, Food Bank, CVMA Emergency Fund, etc.</description>
</CustomField>