src/main/default/objects/CVMA_Housing_Financial_Resource__mdt/fields/Service_Area__c.field-meta.xml
<CustomField>
    <fullName>Service_Area__c</fullName>
    <description>Geographic coverage (National, Florida, Jacksonville, etc.)</description>
    <label>Service Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>