src/main/default/objects/CVMA_Housing_Financial_Resource__mdt/fields/Website_URL__c.field-meta.xml
<CustomField>
    <fullName>Website_URL__c</fullName>
    <description>Resource website for more information</description>
    <label>Website URL</label>
    <type>Url</type>
</CustomField>